# mkt_signal

./: .gitignore  11.ini  AGENTS.md  ANALYSIS_SUMMARY.md  CLAUDE.md  Cargo.toml  EXECUTION_FLOW.md  MODULE_RELATIONSHIP.txt  PRE_TRADE_STRATEGY_ANALYSIS.md  REDIS_CONFIG.md  Readme.md  SIGNAL_LOGIC_AUDIT.md  STRATEGY_HANDLER_USAGE.md  TRAIT_USAGE.md  aws-jp-srv-1.pem  binance-futures-symbol.sock  binance-futures_inc.js  binance-futures_trade.js  build.rs  bybit-symbol.sock  bybit_f.json  bybit_inc_client.js  bybit_trade_client.js  check.ipynb  check.out  check_precision.py  clean_iceoryx.sh  cmd.md  compare_factor_test.py  demo.js  demo_binance.js  demo_binance_sbe_spot.js  demo_binance_sbe_spot_subscribe_all.js  demo_bn_mark.js  demo_bybit.js  demo_gate_contract_multiplier.js  demo_gate_ws_unified_futures.py  demo_okex.js  demo_okex_kline.js  deploy.sh  (+41 more)
.cargo/: config.toml
.claude/: settings.json
anlysis_binance_fr_trade/: check_loss.ipynb  check_loss.py
aster_demo/: ws_smoke_test.py
config/: account_cfg.toml  binance_um_leverage.json  bridge_test_node_a.yaml  bridge_test_node_b.yaml  depth_cfg.yaml  depth_factor_pub.yaml  factor_pool_pipeline.toml  feature_norm.yaml  funding_rate_strategy.toml  fusion_factor_pub.toml  fusion_factor_pub.yaml  iceoryx2.toml  ipc_bridge_example.yaml  ipc_bridge_hk.yaml  ipc_bridge_jp.yaml  ipc_bridge_public_hk.yaml  ipc_bridge_public_jp.yaml  ipc_bridge_public_sg.yaml  ipc_bridge_xarb_okex_binance_hk.yaml  ipc_bridge_xarb_okex_binance_jp.yaml  kline_cfg.yaml  kline_factor_pub.yaml  latency_csv_capture_hk.toml  latency_csv_capture_jp.toml  latency_csv_capture_sg.toml  latency_stable_monitor_hk.yaml  latency_stable_monitor_sg.yaml  manual_mm_signal.yaml  mkt_api_key.toml  mkt_cfg.yaml  model_pub.toml  nginx_locations.txt  nginx_streams.txt  onnx_csv_predict.toml  pairmm_resample.yaml  persist.toml  persist_auto_exporter.toml  persist_exporter.toml  persist_manager.toml  persist_read_server.toml  (+8 more)
cross_scripts/: cross_contract_ops.py  flatten_cross_futures_exposure.py  print_cross_amount_u.py  print_cross_funding_rate_thresholds.py  print_cross_funding_thresholds.py  print_cross_hedge_offset_limits.py  print_cross_max_pos_u.py  print_cross_risk_params.py  print_cross_spread_thresholds.py  print_cross_strategy_params.py  print_cross_symbol_lists.py  start_cross_monitors.sh  start_cross_persist_manager.sh  start_cross_pre_trade.sh  start_cross_trade_engine.sh  start_cross_trade_signal.sh  start_cross_viz_server.sh  stop_cross_monitors.sh  stop_cross_persist_manager.sh  stop_cross_pre_trade.sh  stop_cross_trade_engine.sh  stop_cross_trade_signal.sh  stop_cross_viz_server.sh  sync_cross_amount_u.py  sync_cross_funding_rate_thresholds.py  sync_cross_funding_thresholds.py  sync_cross_max_pos_u.py  sync_cross_risk_params.py  sync_cross_spread_thresholds.py  sync_cross_strategy_params.py  sync_cross_symbol_lists.py
docs/: 1018.md  930.md  account_risk_msg_mapping.md  binance_arb_order_timestamps.md  binance_loan_rate.md  binance_margin_ws_full_handling.md  bitget_approximation_notes.md  bnb_712699_order_group_20260416.md  close_orders_and_exposure_cheatsheet.md  cross_pre_trade_dashboard.html  deploy_xarb_okex_binance_colo.md  dumper.md  event_driven_order_handling.md  factor_pool_pipeline.md  filusdt_uniform_order_tracking_gap_20260403.md  fr_pre_trade_dashboard.html  fr_signal_dashboard.html  fr_signal_viz.md  from_key.md  funding_rate_signal_modes.md  funding_rate_signals.md  funding_resample_dashboard.html  fusion_factor_pub_baseline_018_drop.md  gate_futures_close.md  hedge_flow.md  hedge_signal_ctx.md  intra_pre_trade_dashboard.html  log_err.md  mm_hedge_cancel_investigation_20260324.md  mm_multi_exchange_detailed_implementation_runbook.md  mm_multi_exchange_development_blueprint.md  mm_pre_trade_dashboard.html  model_pub_pipeline.html  order_export_server.md  order_latency_chain_test_plan.md  order_record.md  persist_manager_api.md  persist_read_server.md  persistence_overview.md  pre_trade.md  (+24 more)
examples/: db_check.rs  position_demo.rs
export_data/: order_updates.parquet  signals_arb_cancel.parquet  signals_arb_hedge.parquet  signals_arb_open.parquet  trade_updates.parquet  数据合成说明.md
factor_pool/: hf_factor_catalog.md
intra_scripts/: configure_intra_persist_sync_source.sh  flatten_intra_bybit_futures_exposure.py  flatten_intra_futures_exposure.py  flatten_intra_okx_futures_exposure.py  full_exit_intra_bitget.py  full_exit_intra_bybit.py  full_exit_intra_gate.py  full_exit_intra_okx.py  intra_monitor_process_lib.sh  print_intra_amount_u.py  print_intra_funding_thresholds.py  print_intra_hedge_offset_limits.py  print_intra_max_pos_u.py  print_intra_risk_params.py  print_intra_spread_thresholds.py  print_intra_strategy_params.py  print_intra_symbol_lists.py  start_intra_monitors.sh  start_intra_persist_manager.sh  start_intra_pre_trade.sh  start_intra_trade_engine.sh  start_intra_trade_signal.sh  start_intra_viz_server.sh  stop_intra_monitors.sh  stop_intra_persist_manager.sh  stop_intra_pre_trade.sh  stop_intra_trade_engine.sh  stop_intra_trade_signal.sh  stop_intra_viz_server.sh  sync_intra_amount_u.py  sync_intra_funding_thresholds.py  sync_intra_max_pos_u.py  sync_intra_risk_params.py  sync_intra_spread_thresholds.py  sync_intra_strategy_params.py  sync_intra_symbol_lists.py
mm_scripts/: print_mm_tlen_threshold.py  start_manual_mm_signal.sh  start_mm_persist_manager.sh  start_mm_pre_trade.sh  start_mm_trade_engine.sh  start_mm_viz_server.sh  stop_manual_mm_signal.sh  stop_mm_persist_manager.sh  stop_mm_pre_trade.sh  stop_mm_trade_engine.sh  stop_mm_viz_server.sh  sync_mm_tlen_threshold.py
onnx_xgb_precision_demo/: README.md  compare_onnx_xgb.py
order_query/: run_server.sh  server.py
proto/: persist_sync.proto
scripts/: analyze_linea.py  analyze_order_latency.py  analyze_ret_score_from_orders.py  analyze_symbol_hedge_trades.py  analyze_y_pred_scaling_distribution.py  arb_per_symbol_overrides.py  binance_arb_price_spread_cancel_threshold.py  binance_arb_price_spread_threshold.py  binance_cancel_all_std_spot_orders.py  (+407 more)
src/: app.rs  (+20 more)
(+575 files in other folders)
