[package]
name = "mkt_signal"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "mkt_signal"
path = "src/lib.rs"

[[bin]]
name = "mkt_pub"
path = "src/main.rs"

[[bin]]
name = "funding_rate_signal"
path = "src/bin/funding_rate_strategy.rs"

[[bin]]
name = "account_monitor"
path = "src/bin/account_monitor.rs"

[[bin]]
name = "trade_engine"
path = "src/bin/trade_engine.rs"

[[bin]]
name = "demo_subscribe_resps"
path = "src/bin/demo_subscribe_resps.rs"

[[bin]]
name = "demo_send_um_market_short"
path = "src/bin/demo_send_um_market_short.rs"

[[bin]]
name = "pre_trade"
path = "src/bin/pre_trade.rs"

[[bin]]
name = "funding_rate_strategy_mock"
path = "src/bin/funding_rate_strategy_mock.rs"

[[bin]]
name = "viz_server"
path = "src/bin/viz_server.rs"

[[bin]]
name = "print_pre_trade_snapshot"
path = "src/bin/print_pre_trade_snapshot.rs"

[[bin]]
name = "rolling_metrics"
path = "src/bin/rolling_metrics.rs"


[dependencies]
local-ip-address = "0.6"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
url = "2.4"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
futures = "0.3"
bytes = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
iceoryx2 = "0.5"
uuid = { version = "1.17.0", features = ["v4"] }
sonic-rs = "0.5.1"
tokio-util = "0.7.15"
reqwest = { version = "0.12.19", features = ["json", "blocking"] }
prettytable = "0.10.0"
comfy-table = "=7.1.1"
native-tls = "0.2"
tokio-native-tls = "0.3"
once_cell = "1.19"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
lazy_static = "1.4"
bincode = "1.3"
toml = "0.8"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
urlencoding = "2.1"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
polars-time = "0.43.1"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
libc = "0.2"

[features]
default = []

[dependencies.polars]
version = "0.43.1"
optional = false
default-features = false
features = ["fmt", "lazy", "polars-io", "rolling_window"]
