[package]
name = "mkt_signal"
version = "0.1.0"
edition = "2021"
autobins = false 

[lib] 
name = "mkt_signal" 
path = "src/lib.rs" 

[[bin]]
name = "dat_pbs"
path = "src/bin/dat_pbs.rs"

[[bin]]
name = "spread_pbs"
path = "src/bin/spread_pbs.rs"

[[bin]]
name = "trade_signal"
path = "src/bin/trade_signal.rs"

[[bin]]
name = "binance_account_monitor"
path = "src/bin/binance_account_monitor.rs"

[[bin]]
name = "okex_account_monitor"
path = "src/bin/okex_account_monitor.rs"

[[bin]]
name = "gate_account_monitor"
path = "src/bin/gate_account_monitor.rs"

[[bin]]
name = "bitget_account_monitor"
path = "src/bin/bitget_account_monitor.rs"

[[bin]]
name = "bybit_account_monitor"
path = "src/bin/bybit_account_monitor.rs"

[[bin]]
name = "trade_engine"
path = "src/bin/trade_engine.rs"

[[bin]]
name = "demo_rate_fetcher"
path = "src/bin/demo_rate_fetcher.rs"

[[bin]]
name = "pre_trade"
path = "src/bin/pre_trade.rs"

[[bin]]
name = "viz_server"
path = "src/bin/viz_server.rs"

[[bin]]
name = "fr_signal_dashboard"
path = "src/bin/fr_signal_dashboard.rs"

[[bin]]
name = "rolling_metrics"
path = "src/bin/rolling_metrics.rs"

[[bin]]
name = "persist_manager"
path = "src/bin/persist_manager.rs"

[[bin]]
name = "order_export"
path = "src/bin/order_export.rs"

[[bin]]
name = "order_export_server"
path = "src/bin/order_export_server.rs"

[[bin]]
name = "test_minqty"
path = "src/bin/test_minqty.rs"

[[bin]]
name = "ipc_bridge"
path = "src/bin/ipc_bridge.rs"

[[bin]]
name = "latency_stable_monitor"
path = "src/bin/latency_stable_monitor.rs"

[[bin]]
name = "latency_csv_capture"
path = "src/bin/latency_csv_capture.rs"

[[bin]]
name = "demo_qty_alignment"
path = "src/bin/demo_qty_alignment.rs"

[[bin]]
name = "demo_gate_minqty"
path = "src/bin/demo_gate_minqty.rs"

[[bin]]
name = "delist_schedule"
path = "src/bin/delist_schedule.rs"

[[bin]]
name = "demo_depth_query_tlen"
path = "src/bin/demo_depth_query_tlen.rs"

[[bin]]
name = "market_maker"
path = "src/bin/market_maker.rs"

[[bin]]
name = "depth_pub"
path = "src/bin/depth_pub.rs"

[[bin]]
name = "kline_pub"
path = "src/bin/kline_pub.rs"

[[bin]]
name = "trade_flow_feature_pub"
path = "src/bin/trade_flow_feature_pub.rs"

[[bin]]
name = "pairmm_resample"
path = "src/bin/pairmm_resample.rs"

[[bin]]
name = "model_pub"
path = "src/bin/model_pub.rs"
required-features = ["model-ort"]

[[bin]]
name = "onnx_csv_predict"
path = "src/bin/onnx_csv_predict.rs"
required-features = ["model-ort"]

[[bin]]
name = "fusion_factor_pub"
path = "src/bin/fusion_factor_pub.rs"

[[bin]]
name = "factor_test"
path = "src/bin/factor_test.rs"

[[bin]]
name = "demo_bridge_pub"
path = "src/bin/demo_bridge_pub.rs"

[[bin]]
name = "demo_bridge_sub"
path = "src/bin/demo_bridge_sub.rs"

[[bin]]
name = "iceoryx_dead_nodes_cleanup"
path = "src/bin/iceoryx_dead_nodes_cleanup.rs"

[[bin]]
name = "iceoryx_remove_node_from_service"
path = "src/bin/iceoryx_remove_node_from_service.rs"

[[bin]]
name = "inspect_rl_vol"
path = "src/bin/inspect_rl_vol.rs"

[[bin]]
name = "inspect_iceoryx_service"
path = "src/bin/inspect_iceoryx_service.rs"

[[bin]]
name = "inspect_latency_snapshot"
path = "src/bin/inspect_latency_snapshot.rs"

[[bin]]
name = "inspect_model_output"
path = "src/bin/inspect_model_output.rs"

[[bin]]
name = "inspect_model_input"
path = "src/bin/inspect_model_input.rs"

[dependencies]
factor_engine = { path = "crates/factor_engine" }
local-ip-address = "0.6"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
url = "2.4"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
futures = "0.3"
bytes = { version = "1.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
iceoryx2 = "0.8.1"
uuid = { version = "1.17.0", features = ["v4"] }
sonic-rs = "0.5.1"
tokio-util = "0.7.15"
reqwest = { version = "0.12.19", features = ["json", "blocking"] }
prettytable = "0.10.0"
comfy-table = "=7.1.1"
native-tls = "0.2"
tokio-native-tls = "0.3"
once_cell = "1.19"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
lazy_static = "1.4"
bincode = "1.3"
toml = "0.8"
flate2 = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
urlencoding = "2.1"
axum = { version = "0.7", features = ["ws"] }
tar = "0.4"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
rocksdb = { version = "0.21", default-features = false, features = ["lz4"] }
polars-time = "0.43.1"
dashmap = "5.5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rtrb = "0.3.4"
libc = "0.2"
zmq = "0.10"
mkt_model_runtime = { path = "crates/mkt_model_runtime", optional = true }
indexmap = "2"
rayon = "1.10"
arc-swap = "1.7"

[features]
default = []
model-ort = ["dep:mkt_model_runtime"]

[dependencies.polars]
version = "0.43.1"
optional = false
default-features = false
features = ["fmt", "lazy", "parquet", "polars-io", "rolling_window", "rank", "moment", "cov"]

[profile.release]
debug = 0
strip = "symbols"
lto = "thin"
codegen-units = 4
